[package]
name = "rusty_jsc"
version = "0.0.1"
description = "Rust bindings for the JavaScriptCore engine"
keywords = [ "javascriptcore", "javascript" ]
authors = [ "Pekka Enberg" ]
license = "MIT"
repository = "https://github.com/penberg/rusty_jsc"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.62"
rusty_jsc_macros = { path = "./macros", version = "0.0.1" }
rusty_jsc_sys = { path = "./sys", version = "0.0.1" }
