[package]
name = "rusty_jsc"
version = "0.1.0"
description = "Rust bindings for the JavaScriptCore engine"
keywords = [ "javascriptcore", "javascript" ]
authors = [ "Wasmer Engineering Team <engineering@wasmer.io>", "Pekka Enberg", "Adrien Zinger" ]
license = "MIT"
repository = "https://github.com/wasmerio/rusty_jsc"
edition = "2021"

[lib]

[dependencies]
rusty_jsc_macros = { path = "./macros", version = "0.1.0" }
rusty_jsc_sys = { path = "./sys", version = "0.1.0" }
