[package]
name = "rusty_jsc_sys"
version = "0.1.0"
description = "Raw bindings for the JavaScriptCore engine"
authors = [ "Wasmer Engineering Team <engineering@wasmer.io>", "Pekka Enberg", "Adrien Zinger" ]
repository = "https://github.com/wasmerio/rusty_jsc"
license = "MIT"
edition = "2021"

[lib]

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.9"
